# Rust-SAF

./: LICENSE  README.md  build-rust.sh  default.devshell.nix  flake.nix  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/one/rachelt/rust_saf/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/androidx/documentfile/provider/: TreeDocumentFileWrapper.kt
app/src/main/java/one/rachelt/rust_saf/: FileListActivity.kt  MainActivity.kt
app/src/main/res/drawable/: ic_file.xml
app/src/main/res/layout/: activity_file_list.xml  activity_main.xml  item_file_list.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/rust/: Cargo.toml  build.rs
app/src/main/rust/main/: Cargo.toml
app/src/main/rust/main/src/: lib.rs
app/src/main/rust/ndk-saf/: Cargo.toml
app/src/main/rust/ndk-saf/src/: jni_utils.rs  lib.rs  ndk_saf.rs
app/src/test/java/one/rachelt/rust_saf/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
