[package]
name = "main"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
ndk-context = "0.1.1"
jni = "0.21.1"
log = { version = "0.4.22" }
tracing-subscriber = { version = "0.3.18", features = ["chrono", "registry"] }
tracing-logcat = "0.1.0"
ndk-saf = { path = "../ndk-saf" }
